# feedshepherd

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml  scripts.py
.github/workflows/: ci.yaml
feedshepherd/: __init__.py  __main__.py  test_text.py  text.py  utils.py
samples/: DoggCatcherExport.opml  Sample-OPML.xml  a-phone-call-from-paul.rss  changelog-master-feed.rss  crazygenius.rss  data-skeptic.rss  irl-online-life-is-real-life.rss  linux-journals-reality-20.rss  ologies-with-alie-ward.rss  partially-derivative.rss  philosophy-bites.rss  radio-atlantic.rss  radiolab-presents-more-perfect.rss  radiolab.rss  rationally-speaking.rss  scishow-tangents.rss  social-science-bites.rss  software-engineering-radio-the-podcast-for-professional-software-developers.rss  talk-nerdy-with-cara-santa-maria.rss  talking-machines.rss  test.opml  the-atlantic-interview.rss  the-infinite-monkey-cage.rss  the-life-scientific.rss  the-skeptics-guide-to-the-universe.rss  weirdtrickmafiafm.rss
